--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.5.3",
     "express": "^4.18.2",
     "jquery": "^3.7.0",
+    "mongodb": "^5.7.0",
     "popper.js": "^1.16.1"
   },
   "scripts": {
